--- a/styles/projects.css
+++ b/styles/projects.css
@@ -41,6 +41,9 @@
     justify-content: center;
 }
 
+#yt-image {
+    max-width: 300px;
+}
 
 @media only screen and (max-width: 600px) {
     .yt-sect {
