--- a/styles/projects.css
+++ b/styles/projects.css
@@ -45,6 +45,10 @@
     max-width: 300px;
 }
 
+#puzzle-image {
+    max-width: 45vw;
+}
+
 @media only screen and (max-width: 600px) {
     .yt-sect {
         display: block;
@@ -69,6 +73,7 @@
         display: block;
         margin-left: auto;
         margin-right: auto;
+        max-width: 70vw;
     }
 }
 
