Increased header font

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -12,6 +12,7 @@
     background-color: #111111;
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
+    font-size: 2.4em;
 }
 
 #contact-header-desc {
