Added language and fixed submit contrast error.

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -57,6 +57,6 @@
     color: white;
     margin-top: 10px;
     margin-bottom: 20px;
-    background: #429AEB;
+    background: #0082fc;
     font-size: 1.1em;
 }
