Updated color for button

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -57,6 +57,6 @@
     color: white;
     margin-top: 10px;
     margin-bottom: 20px;
-    background: #0082fc;
-    font-size: 1.1em;
+    background: #1864ab;
+    font-size: 1.2em;
 }
